editing spacing issues

--- a/styles.css
+++ b/styles.css
@@ -49,10 +49,10 @@
 
     .pdfViewer {
         width: 100%;
-        height: 60vh;
+        height: 87%;
     }
 
     .pdfContainer {
-        margin-top: 1%;
+        margin-top: 2%;
     }
 }
